<resources>
    <string name="app_name">KotlinMessenger</string>
    <string name="already_have_an_acoount_register">Already have an acoount?</string>
    <string name="email_register">Email</string>
    <string name="name_register">Name</string>
    <string name="password_register">Password</string>
    <string name="register_register">Register</string>
    <string name="login_login">Login</string>
    <string name="i_dont_have_an_account_login">I dont have an account</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="username_news">Username</string>
    <string name="typing_message_here">Typing message here</string>
    <string name="send_chat_log">Send</string>
    <string name="my_message_here">My message here</string>
    <string name="username_latest_message">Username</string>
    <string name="latest_message_here_latest_message">Latest message here</string>
    <string name="_15_07">15 : 07</string>
    <string name="user_profile">User Profile</string>
    <string name="aslan_coder">Aslan Coder</string>
    <string name="sender_image">sender image</string>
    <string name="sender_video">sender video</string>
    <string name="play_audio">play audio</string>
    <string name="name_surname_account">Name Surname</string>
    <string name="bios_here_account">Bios here</string>
    <string name="update_account">Update</string>
    <string name="take_video">Take Video</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>