<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CA700"
    tools:context=".activity.register.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
      />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="633dp"
        app:layout_constraintTop_toBottomOf="@+id/idont_have_account_text_view" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_fire_emoji"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonNameLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonNameLogin"
        app:layout_constraintTop_toTopOf="@+id/guideLine" />

    <EditText
        android:id="@+id/editTextTextPersonNameLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_cruiclar"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email_register"
        android:inputType="textPersonName"
        android:paddingStart="15sp"
        android:textColorHint="#0A0909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_login"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text_cruiclar"
        android:ems="10"
        android:paddingStart="15sp"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:textColorHint="#0A0909"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonNameLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonNameLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonNameLogin"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_curiclar"
        android:text="@string/login_login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordLogin" />

    <TextView
        android:id="@+id/idont_have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/i_dont_have_an_account_login"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />
</androidx.constraintlayout.widget.ConstraintLayout>