<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E8E6E6">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewLatestMessage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_fire_emoji"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLatestMessageUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/username_latest_message"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewLatestMessage"
        app:layout_constraintTop_toTopOf="@+id/imageViewLatestMessage" />

    <TextView
        android:id="@+id/textViewLatestMessageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:text="@string/latest_message_here_latest_message"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewLatestMessage"
        app:layout_constraintTop_toBottomOf="@+id/textViewLatestMessageUsername" />

    <ProgressBar
        android:id="@+id/progressBarLatestMessage"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLatestMessage"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLatestMessage"
        app:layout_constraintStart_toStartOf="@+id/imageViewLatestMessage"
        app:layout_constraintTop_toTopOf="@+id/imageViewLatestMessage" />

    <TextView
        android:id="@+id/textViewLatestMesageTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/_15_07"
        app:layout_constraintBottom_toTopOf="@+id/textViewLatestMessageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLatestMessageUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>